WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123697
AX: Mail attachments at the start of an email are not output by VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=123697
Summary
AX: Mail attachments at the start of an email are not output by VoiceOver
chris fleizach
Reported
2013-11-03 00:35:32 PDT
Attachments that are the first character of a sent email are not seen by accessibility. Repro Steps: Compose a new email and attach a text document Send it to yourself Turn on VO and then try to get VO to output the attachment Notice that VO will never read it The problem is that the message never contains the AppKit text attachment character (e.g. \ufffc). <
rdar://problem/15184300
>
Attachments
patch
(9.65 KB, patch)
2013-11-03 00:45 PDT
,
chris fleizach
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(480.50 KB, application/zip)
2013-11-03 01:47 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2
(533.35 KB, application/zip)
2013-11-03 02:56 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion
(518.56 KB, application/zip)
2013-11-03 03:18 PST
,
Build Bot
no flags
Details
patch
(19.82 KB, patch)
2013-11-04 14:19 PST
,
chris fleizach
rniwa
: review+
eflews.bot
: commit-queue-
Details
Formatted Diff
Diff
patch
(20.75 KB, patch)
2013-11-04 16:14 PST
,
chris fleizach
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-11-03 00:45:30 PDT
Created
attachment 215849
[details]
patch
Build Bot
Comment 2
2013-11-03 01:47:18 PST
Comment on
attachment 215849
[details]
patch
Attachment 215849
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/19608518
New failing tests: platform/mac/accessibility/object-replacements-at-node-start.html editing/execCommand/remove-format-elements.html editing/execCommand/button.html editing/pasteboard/paste-noscript-xhtml.xhtml
Build Bot
Comment 3
2013-11-03 01:47:19 PST
Created
attachment 215857
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 4
2013-11-03 02:56:55 PST
Comment on
attachment 215849
[details]
patch
Attachment 215849
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/20408008
New failing tests: platform/mac/accessibility/object-replacements-at-node-start.html editing/execCommand/remove-format-elements.html editing/execCommand/button.html editing/pasteboard/paste-noscript-xhtml.xhtml
Build Bot
Comment 5
2013-11-03 02:56:56 PST
Created
attachment 215860
[details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2013-11-03 03:18:02 PST
Comment on
attachment 215849
[details]
patch
Attachment 215849
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/20478010
New failing tests: platform/mac/accessibility/object-replacements-at-node-start.html editing/execCommand/remove-format-elements.html editing/execCommand/button.html editing/pasteboard/paste-noscript-xhtml.xhtml
Build Bot
Comment 7
2013-11-03 03:18:03 PST
Created
attachment 215862
[details]
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
chris fleizach
Comment 8
2013-11-04 14:19:10 PST
Created
attachment 215950
[details]
patch
Ryosuke Niwa
Comment 9
2013-11-04 14:29:16 PST
Comment on
attachment 215950
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215950&action=review
> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:1 > +b
Can we hide this b once the test had run?
> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:7 > +Object string for BODY range: b
What happened to the text here?
> LayoutTests/platform/mac/accessibility/object-replacement-with-rendered-children-at-node-start-expected.txt:2 > +inside > +b
Ditto.
chris fleizach
Comment 10
2013-11-04 14:38:35 PST
Comment on
attachment 215950
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215950&action=review
>> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:1 >> +b > > Can we hide this b once the test had run?
yep
>> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:7 >> +Object string for BODY range: b > > What happened to the text here?
That's the attachment character when rendered in expected results (0x7FFF) i think. So that's what we're looking for
EFL EWS Bot
Comment 11
2013-11-04 14:52:20 PST
Comment on
attachment 215950
[details]
patch
Attachment 215950
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/19578823
Ryosuke Niwa
Comment 12
2013-11-04 14:59:13 PST
(In reply to
comment #10
)
> (From update of
attachment 215950
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=215950&action=review
>
> >> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:7 > >> +Object string for BODY range: b > > > > What happened to the text here? > > That's the attachment character when rendered in expected results (0x7FFF) i think. So that's what we're looking for
Can we compare the results in script or something so that the output isn't so mysterious?
chris fleizach
Comment 13
2013-11-04 15:02:14 PST
Comment on
attachment 215950
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215950&action=review
>>>> LayoutTests/platform/mac/accessibility/object-replacement-with-no-rendered-children-at-node-start-expected.txt:7 >>>> +Object string for BODY range: b >>> >>> What happened to the text here? >> >> That's the attachment character when rendered in expected results (0x7FFF) i think. So that's what we're looking for > > Can we compare the results in script or something so that the output isn't so mysterious?
sure, i'll replace that character with something meaningful
chris fleizach
Comment 14
2013-11-04 16:14:56 PST
Created
attachment 215963
[details]
patch
chris fleizach
Comment 15
2013-11-04 16:45:59 PST
http://trac.webkit.org/changeset/158617
Darin Adler
Comment 16
2013-11-04 17:26:49 PST
Comment on
attachment 215963
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215963&action=review
> Tools/DumpRenderTree/AccessibilityUIElement.cpp:1257 > + return 0;
nullptr
> Tools/DumpRenderTree/AccessibilityUIElement.cpp:1262 > + return 0;
nullptr
> Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:1573 > + return 0;
nullptr
> Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:1583 > + return 0;
nullptr
> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:1461 > + return 0;
nullptr
> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:1467 > + return 0;
nullptr
> Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:1553 > + return 0;
nullptr
> Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:1563 > + return 0;
nullptr
chris fleizach
Comment 17
2013-11-04 17:40:06 PST
(In reply to
comment #16
)
> (From update of
attachment 215963
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=215963&action=review
> > > Tools/DumpRenderTree/AccessibilityUIElement.cpp:1257 > > + return 0; > > nullptr > > > Tools/DumpRenderTree/AccessibilityUIElement.cpp:1262 > > + return 0; > > nullptr > > > Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:1573 > > + return 0; > > nullptr > > > Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:1583 > > + return 0; > > nullptr > > > Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:1461 > > + return 0; > > nullptr > > > Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:1467 > > + return 0; > > nullptr > > > Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:1553 > > + return 0; > > nullptr > > > Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:1563 > > + return 0; > > nullptr
Thanks Darin. Instead of doing this piecemeal, I just filed to handle all the cases in DRT WKTR
https://bugs.webkit.org/show_bug.cgi?id=123773
which I'll have a patch ready soon
mitz
Comment 18
2013-12-30 21:05:40 PST
(In reply to
comment #15
)
>
http://trac.webkit.org/changeset/158617
This caused
bug 126322
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug